お知らせにInstagram のリンクを追記

--- a/public/index.html
+++ b/public/index.html
@@ -158,10 +158,10 @@
             <a href="https://kawasaki-fa.com/u12/2025_hungary_20251011_01/" target="_blank">ハンガリー大使館杯 U-11 川崎市秋季サッカー大会2025 にて 3位</a> となりました。<br>
             <br>たくさんの応援、誠にありがとうございました。
             
-            <!--
-            <br>(当日の様子は <a href="https://www.instagram.com/p/DLn_Nm8TQul"
+            <br>(当日の様子は <a href="https://www.instagram.com/p/DP9EqbxEb7C"
             target="_blank">FC中原 Instagram</a> でもご紹介しています)
           </div>
+          <!--
           
           <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
             <h4 class="info-date">2025.04.06</h4>
