--- a/public/index.html
+++ b/public/index.html
@@ -518,8 +518,9 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2025.10.11] ハンガリー大使館杯U-11川崎市秋季サッカー大会2025 3位</li>
                   <li>- [2024.08.11-13] 富士住建CUP Bカテゴリー 3位</li>
-                  <li>- [2024.05.04] バオムFCカップカップ 準優勝</li>
+				  <li>- [2024.05.04] バオムFCカップカップ 準優勝</li>
                   <li>- [2024.02.04] 平間カップ U-9大会　優勝</li>
                   <li>- [2024.01.20] FCレガーレわくわくカップ U9　優勝</li>
                   <li>- [2023.12.16] U-9川崎市秋季サッカー大会2023 ベスト8</li>
