--- a/public/index.html
+++ b/public/index.html
@@ -579,6 +579,8 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2025.11.08] ホワイト 第44回こどもの国サッカー大会(中学年の部) 第3位</li>
+                  <li>- [2025.11.07] ホワイト G. O. A. Tカップ 優勝</li>
                   <li>- [2025.8.15-17] あおぞらCUPジュニアサッカーフェスティバル U10 FC中原-C 優勝/FC中原-B 準優勝/FC中原-A 3位</li>
                   <li>- [2025.07.21] YSGEM かまぼこCup U10大会 準優勝</li>
                   <li>- [2025.07.21] U10 国府津FC サマーチャレンジカップ 準優勝</li>
