SEO・セキュリティ改善とSNSシェア対応

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,24 @@
   <title>FC中原公式ウェブサイト</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="神奈川県川崎市中原区で活動するサッカーチームFC中原の公式ウェブサイト。キッズから小学6年生、少女チームまで活動しています。サッカーの楽しさ、素晴らしさを伝え、サッカーを通じて人を育てるクラブです。">
+  <meta name="keywords" content="FC中原,サッカー,川崎市,中原区,少年サッカー,ジュニアサッカー,キッズサッカー,少女サッカー,神奈川">
   <meta property="al:web:should_fallback" content="false" />
+  
+  <!-- OGP (Open Graph Protocol) -->
+  <meta property="og:title" content="FC中原公式ウェブサイト">
+  <meta property="og:description" content="神奈川県川崎市中原区で活動するサッカーチーム。キッズから小学6年生、少女チームまで活動しています。">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://fcnakahara.net">
+  <meta property="og:image" content="https://fcnakahara.net/images/logo002.png">
+  <meta property="og:site_name" content="FC中原">
+  <meta property="og:locale" content="ja_JP">
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="FC中原公式ウェブサイト">
+  <meta name="twitter:description" content="神奈川県川崎市中原区で活動するサッカーチーム。キッズから小学6年生、少女チームまで活動しています。">
+  <meta name="twitter:image" content="https://fcnakahara.net/images/logo002.png">
 
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,700,900&display=swap" rel="stylesheet">
 
